# slack-attendance-lambda

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  deploy-both.sh  deploy.sh  test-event.json
src/: main.rs  notion.rs  slack.rs  types.rs
src/processor/: Cargo.toml  main.rs  types.rs
src/receiver/: Cargo.toml  main.rs  slack.rs  types.rs
terraform/: iam.tf  lambda_processor.tf  lambda_receiver.tf  main.tf  outputs.tf  sqs.tf  terraform.tfvars.example  variables.tf  versions.tf
