[package]
name = "slack-attendance-lambda"
version = "0.1.0"
edition = "2021"

[dependencies]
lambda_http = "0.13.0"
tokio = { version = "1", features = ["macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde_urlencoded = "0.7"
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4"
hmac = "0.12"
sha2 = "0.10"
base64 = "0.22"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
