[workspace]
members = [
    "src/receiver",
    "src/processor"
]
resolver = "2"

# Workspace-wide configuration
[workspace.dependencies]
# Common dependencies across both crates
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["macros"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4"
hmac = "0.12"
sha2 = "0.10"

# HTTP and AWS specific dependencies
lambda_http = "0.13.0"
lambda_runtime = "0.13"
aws_lambda_events = "0.16"
aws-config = { version = "1.5", features = ["behavior-version-latest"] }
aws-sdk-sqs = "1.45"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde_urlencoded = "0.7"
base64 = "0.22"