[package]
name = "slack-attendance-processor"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "bootstrap"
path = "main.rs"

[dependencies]
lambda_runtime = { workspace = true }
aws_lambda_events = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
serde_urlencoded = { workspace = true }
chrono = { workspace = true }
hex = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }
base64 = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
