[package]
name = "slack-attendance-receiver"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "bootstrap"
path = "main.rs"

[dependencies]
lambda_http = "0.13.0"
tokio = { version = "1", features = ["macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_urlencoded = "0.7"
aws-config = { version = "1.5", features = ["behavior-version-latest"] }
aws-sdk-sqs = "1.45"
hex = "0.4"
hmac = "0.12"
sha2 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }