[package]
name = "slack-attendance-receiver"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "slack-attendance-receiver"
path = "main.rs"

[dependencies]
lambda_http = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_urlencoded = { workspace = true }
aws-config = { workspace = true }
aws-sdk-sqs = { workspace = true }
hex = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }